# chromium-search-migrator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/chromium_search_migrator/: __init__.py  cli.py  core.py
